@@ -8,6 +8,10 @@
 	"offset" keyword into shared routine save_position().  That way we
 	can efficiently skip the whole thing if the offset is zero.
 
+	* src/datafile.c (df_tokenise): Add back a copy and a comment
+	corresponding to the old sscanf() input code.  This makes is easy if
+	someone wants to compare new and old code paths.
+
 2005-07-29  Petr Mikulik  <mikulik@physics.muni.cz>
 
 	* demo/pm3d.dem: Added missing text for a "pause -1".
